# Doughmain

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js/bench/: _setup.ts  add_to_collection_v1.ts
clients/js/src/: index.ts  plugin.ts
clients/js/test/: _setup.ts  add_to_asset_v1.test.ts  add_to_collection_v1.test.ts  crank.test.ts  feed_spl_token.test.ts  getProgram.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
idls/: bgl_dough_program.json
programs/bgl-dough/: Cargo.toml  README.md
programs/bgl-dough/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/bgl-dough/src/processor/: add_to_asset.rs  add_to_collection.rs  crank.rs  feed_spl_token.rs  mod.rs
