[package]
edition = "2021"
license-file = "../../LICENSE"
name = "bgl-dough-program"
publish = false
readme = "./README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
mpl-core = "0.8.0"
mpl-utils = "0.3.5"
num-derive = "^0.4"
num-traits = "^0.2"
shank = "0.4.2"
solana-program = "~1.18"
spl-associated-token-account = { version = "3.0.4", features = [
  "no-entrypoint",
] }
spl-token-2022 = "3.0.4"
thiserror = "^1.0"
